--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "laravelcollective/html": "^6.3",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "intervention/image": "dev-master"
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
